make the header background blured and fixed the issue with the overlapping icong above the header

--- a/style/timeline.css
+++ b/style/timeline.css
@@ -13,10 +13,13 @@
   flex-direction: row;
   align-items: center;
   justify-content: space-evenly;
-  position: fixed;
+  position: sticky;
+  top: 0;
+  z-index: 1000;
   height: 50px;
   width: 650px;
-  background-color: black;
+  background-color: rgba(0, 0, 0, 0.652);
+  backdrop-filter: blur(5px);
   border-bottom: 1px solid rgb(47, 51, 54);
 }
 
@@ -114,6 +117,7 @@
 .icon i {
   color: rgb(29, 155, 240);
   font-size: 12px;
+  position: static;
 }
 
 .buttons {
